<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/edit"
        android:icon="@drawable/baseline_edit_24"
        android:title="@string/edit"
        android:iconTint="@color/white"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/delete"
        android:icon="@drawable/baseline_delete_24"
        android:title="@string/delete"
        android:iconTint="@color/white"
        app:showAsAction="always"/>
    <item
        android:id="@+id/more"
        android:icon="@drawable/baseline_more_vert_24"
        android:title="@string/more"
        android:iconTint="@color/white"
        app:showAsAction="always"/>
</menu>