<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.kwasowski.sportslife.ui.exercise.details.ExerciseDetailsViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:colorBackground">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/top_app_bar"
                style="@style/ActionBar"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                app:menu="@menu/toolbar_details"
                app:navigationIcon="@drawable/baseline_arrow_back_24"
                app:title="@string/details"
                app:titleTextColor="@color/white" />
        </com.google.android.material.appbar.AppBarLayout>




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical"
                android:layout_below="@+id/app_bar">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/name"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/exercise_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@{viewModel.name}"
                    tools:text="NAME OF EXERCISE" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="2dp"

                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/description"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/exercise_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@{viewModel.description}"
                    tools:text="DESCRIPTION OF EXERCISE" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="2dp"

                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/category"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/exercise_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@{viewModel.category}"
                    tools:text="CATEGORY OF EXERCISE" />

                <TextView
                    android:id="@+id/exercise_video_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="2dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/video"
                    android:textSize="16sp"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/exercise_video"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="@{() -> viewModel.onVideoClick()}"
                    android:text="@string/watch_video"
                    android:visibility="gone"
                    app:cornerRadius="10dp"
                    tools:visibility="visible" />
            </LinearLayout>
    </RelativeLayout>
</layout>