<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/app_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:colorBackground">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/top_app_bar"
                    style="@style/ActionBar"
                    android:layout_width="match_parent"
                    android:layout_height="?android:attr/actionBarSize"
                    app:navigationIcon="@drawable/baseline_arrow_back_24"
                    app:title="@string/training_plans"
                    app:titleTextColor="@color/white" />
            </com.google.android.material.appbar.AppBarLayout>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/app_bar"
                app:tabBackground="?android:colorPrimary"
                app:tabIndicatorAnimationMode="elastic"
                app:tabIndicatorColor="@color/white"
                app:tabIndicatorFullWidth="true"
                app:tabMode="fixed"
                app:tabGravity="fill"
                app:tabMaxWidth="0dp"
                app:tabSelectedTextColor="@color/white"
                app:tabTextColor="?attr/colorTertiary">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/own" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/communities" />

            </com.google.android.material.tabs.TabLayout>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewpager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/tabs" />
        </RelativeLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fab"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:contentDescription="@string/add_a_new_training_plan"
            app:backgroundTint="?attr/colorPrimaryContainer"
            app:srcCompat="@drawable/baseline_add_24"
            app:tint="?attr/colorOnPrimaryContainer"/>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>