<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.kwasowski.sportslife.ui.activeTraining.fragment.ExerciseSeriesViewModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add_series"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/add_series"
            android:textAlignment="center"
            android:textColor="@color/green"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/baseline_add_24"
            app:drawableTint="@color/green" />

        <androidx.cardview.widget.CardView
            android:id="@+id/exercise_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/exercise_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".9"
                    android:fontFamily="@font/roboto_regular"
                    android:textSize="28sp" />

                <ImageButton
                    android:id="@+id/exercise_more_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:background="@android:color/transparent"
                    android:src="@drawable/baseline_navigate_next_24"
                    app:tint="?attr/colorSurfaceInverse" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/headers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="4">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/series" />

            <TextView
                android:id="@+id/value_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/value" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/repeats" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/completed" />

        </LinearLayout>


        <ListView
            android:id="@+id/series"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="8dp"
            android:layout_marginBottom="4dp"
            android:divider="?attr/colorOutline"
            android:dividerHeight="1dp"
            android:elevation="1dp"
            android:footerDividersEnabled="true"
            android:nestedScrollingEnabled="false"
            android:scrollbars="none"
            tools:itemCount="7"
            tools:listitem="@layout/item_series_in_active_training" />

    </LinearLayout>
    </ScrollView>
</layout>
